src/objects/LeanData__Upload_Contact_Match__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__CSV_Job_Id__c</fullName>
        <label>CSV Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__CSV_Row_Id__c</fullName>
        <label>CSV Row Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_City__c</fullName>
        <label>Contact City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Email2__c</fullName>
        <label>Contact Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_FirstName__c</fullName>
        <label>Contact FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_LastName__c</fullName>
        <label>Contact LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_PostalCode__c</fullName>
        <label>Contact PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_State__c</fullName>
        <label>Contact State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Street__c</fullName>
        <label>Contact Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Match_Type__c</fullName>
        <label>Match Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Upload Contact Match</label>
    <nameField>
        <label>Upload Contact Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upload Contact Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>